[project]
name = "pre-existing-condition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.2.1",
    "ipykernel>=7.3.0",
    "nbformat>=4.2.0",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.3.260530",
    "plotly[express]>=6.8.0",
    "zstandard>=0.25.0",
]
